# kg-ux-rust

./: .copyright  .editorconfig  .firebaserc  .gitignore  .rustfmt.toml  .tool-versions  Cargo.toml  Makefile.toml  README.adoc  Trunk.toml  firebase.json  package.json  webpack.config.js
.github/workflows/: build.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  lint.yml
docs/adrs/: BOOK.adoc  README.adoc  adr-template.adoc  code-testing-approach.adoc  intro.adoc  not-using-thedodd-trunk.adoc  use-adrs.adoc  wasm-pack-vs-wasm-bindgen.adoc
docs/how-to/: README.adoc  how-to-interoperate-with-javascript.adoc  how-to-run-it-locally.adoc
src/: app.rs  header.rs  item.rs  lib.rs  list.rs  main.rs
static/: .gitignore  firebase_authentication_logic.js  index.html  package.json  styles.scss
