[package]
name = "kg-ux-rust"
version = "0.1.0"
repository = "https://github.com/agnos-ai/kg-ux-rust"
authors = ["Jacobus Geluk <jacobus.geluk@agnos.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
log = "0.4.11"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
