[package]
name = "kg-ux-rust"
version = "0.1.0"
repository = "https://github.com/agnos-ai/kg-ux-rust"
authors = ["Jacobus Geluk <jacobus.geluk@agnos.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0"
log = "^0"
web-sys = "^0.3"
wasm-logger = "^0"
wasm-bindgen = "^0"
wasm-bindgen-futures = "^0"
#yew-material = { git = "https://github.com/hamza1311/yew-material/", branch = "master", features = ["full"] }
ybc = "0.1.6"
