[package]
name = "kg-ux-rust"
version = "0.1.0"
repository = "https://github.com/agnos-ai/kg-ux-rust"
authors = ["Jacobus Geluk <jacobus.geluk@agnos.ai>"]
edition = "2018"

[features]
use_wee_alloc = ["wee_alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "^0"
log = "^0"
wasm-logger = "^0"
wasm-bindgen = "^0"
wasm-bindgen-futures = "^0"
wee_alloc = { version = "^0", optional = true }
ybc = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'KeyboardEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
